--- a/strukly-frontend/src/css/WalletSection.css
+++ b/strukly-frontend/src/css/WalletSection.css
@@ -56,7 +56,7 @@
   text-align: center;
   gap: 10px;
   background: #fff;
-  width: 50%;
+  width: auto;
   height: 30%;
   padding: 20px;
   border-radius: 20px;
