--- a/strukly-frontend/src/index.css
+++ b/strukly-frontend/src/index.css
@@ -33,6 +33,12 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 1rem 0 1.5rem 0;
+}
+
+h2 {
+  line-height: 1.1;
+  margin: 1rem 0 1rem 0;
 }
 
 button {
